--- a/app/assets/stylesheets/store/sold_screen.css.scss
+++ b/app/assets/stylesheets/store/sold_screen.css.scss
@@ -422,7 +422,7 @@ ul#products {
     border: 1px solid lighten($body_text_color, 60);
 
     img {
-      padding: 5px;
+      //padding: 5px;
     }
 
     &:hover, &.selected {
